--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@progress/kendo-angular-popup": "^3.0.0",
     "@progress/kendo-angular-common": "^1.0.0",
     "@angular/localize": "~9.1.1",
-    "@progress/kendo-theme-default": "latest"
+    "@progress/kendo-theme-default": "latest",
+    "@angular/cli": "~9.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
     "@types/node": "^12.11.1",
