--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@progress/kendo-angular-common": "^1.0.0",
     "@angular/localize": "~9.1.1",
     "@progress/kendo-theme-default": "latest",
-    "@angular/cli": "~9.1.1"
-  },
-  "devDependencies": {
+    "@angular/cli": "~9.1.1",
     "@angular-devkit/build-angular": "~0.901.1",
     "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1",
+    "@angular/language-service": "~9.1.1"
+  },
+  "devDependencies": {
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
