--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@angular/cli": "~9.1.1",
     "@angular-devkit/build-angular": "~0.901.1",
     "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1"
+    "@angular/language-service": "~9.1.1",
+    "typescript": "~3.8.3"
   },
   "devDependencies": {
     "@types/node": "^12.11.1",
@@ -51,7 +52,6 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0"
   }
 }
